# chalice-url-shortener

./: .gitignore  README.md  pyproject.toml
url-shortener/: app.py  utils.py
